complete functionality tested

--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -19,7 +19,7 @@
                         <a class="nav-link" href="/books/dashboard">My Collection</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/auth/logout">Logout ({{user.username}})</a>
+                        <a class="nav-link" href="/auth/logout">Logout</a>
                     </li>
                 {{else}}
                     <li class="nav-item">
